# teehee-joke-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  teehee-joke.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  teehee-joke.rockspec  teehee-joke_sdk.lua  teehee-joke_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  teeheejoke_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  teeheejoke_sdk.py  teeheejoke_types.py
py/core/: context.py  control.py  helpers.py  response.py  spec.py
py/entity/: joke_entity.py
py/feature/: idempotency_feature.py  metrics_feature.py  rbac_feature.py  retry_feature.py  test_feature.py
py/test/: runner.py  test_exists.py  test_feature.py  test_joke_direct.py  test_joke_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  feature_add.py  feature_hook.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_request.py  make_response.py  make_result.py  make_url.py  param.py  prepare_auth.py  prepare_method.py  prepare_path.py
rb/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  TeeheeJoke_sdk.gemspec  TeeheeJoke_sdk.rb  config.rb  (+2 more)
(+409 files in other folders)
